--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-10  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* no.po: Added Norwegian (bokmål) translation.
+	
 2001-12-10  Richard Hult  <rhult@codefactory.se>
 
 	* uk.po: utf-8 is spelled utf-8, not utf-8 :)
