--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-10  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* configure.in: Added "no" to ALL_LINGUAS.
+	
 2001-12-10  Mikael Hallendal  <micke@codefactory.se>
 
 	* src/yelp-window.c (yw_class_init): added signal for new window.
