--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-11  Stanislav Visnovsky  <visnovsky@nenya.ms.mff.cuni.cz>
+
+	* sk.po: Added Slovak translation.
+
 2001-12-10  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* no.po: Added Norwegian (bokmål) translation.
