add Accel group. (yw_create_toolbar): added tooltips, needs update
2001-12-12  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-window.c (yw_populate): add Accel group.
	(yw_create_toolbar): added tooltips, needs update

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2001-12-12  Mikael Hallendal  <micke@codefactory.se>
+
+	* src/yelp-window.c (yw_populate): add Accel group.
+	(yw_create_toolbar): added tooltips, needs update
+
 2001-12-11  Stanislav Visnovsky  <visnovsky@nenya.ms.mff.cuni.cz>
 
 	* configure.in: Adde "sk" to ALL_LINGUAS.
