--- a/po/sk.po
+++ b/po/sk.po
@@ -5,20 +5,16 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
-"POT-Creation-Date: 2001-12-07 07:52-0500\n"
-"PO-Revision-Date: 2001-12-07 22:09CET\n"
+"POT-Creation-Date: 2001-12-13 14:40+0100\n"
+"PO-Revision-Date: 2001-12-13 14:41CET\n"
 "Last-Translator: Stanislav Visnovsky <visnovsky@nenya.ms.mff.cuni.cz>\n"
-"Language-Team: Slovak <sk-i18n@linux.sk>\n"
+"Language-Team: Slovak <sk-i18n@lists.linux.sk>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 0.9.6\n"
 
-#: src/yelp-toc.c:140
-msgid "Section"
-msgstr "aapitola"
-
-#: src/yelp-doc-view.c:363
+#: src/yelp-html.c:367
 msgid ""
 "<html><head><title>This is Yelp, a help browser for GNOME 2.0</title></"
 "head><body bgcolor=\"white\"><h3>Welcome to Yelp!</h3>This is to be a help "
@@ -27,40 +23,68 @@ msgid ""
 msgstr ""
 "<html><head><title>Toto je Yelp, prehliadač Pomocníka pre GNOME 2.0</title></"
 "head><body bgcolor=\"white\"><h3>Víta vás Yelp!</h3>Toto je prehliadač "
-"pomocníka pre GNOME 2.0, ktorý napísal Mikael Hallendal.<br><br>Prosím, prečítajte "
-"si súbory README a TODO<br></body></html>"
+"pomocníka pre GNOME 2.0, ktorý napísal Mikael Hallendal.<br><br>Prosím, "
+"prečítajte si súbory README a TODO<br></body></html>"
 
-#: src/yelp-window.c:86
+#: src/yelp-view-content.c:159 src/yelp-view-index.c:172
+msgid "Section"
+msgstr "aapitola"
+
+#: src/yelp-window.c:105
 msgid "/_File"
 msgstr "/_Súbor"
 
-#: src/yelp-window.c:87
+#: src/yelp-window.c:106
 msgid "/File/_New window"
 msgstr "/Súbor/_Nové okno"
 
-#: src/yelp-window.c:88
+#: src/yelp-window.c:107
 msgid "/File/E_xit"
 msgstr "/Súbor/_Koniec"
 
-#: src/yelp-window.c:89
+#: src/yelp-window.c:108
 msgid "/_Help"
 msgstr "/_Pomocník"
 
-#: src/yelp-window.c:90
+#: src/yelp-window.c:109
 msgid "/Help/_About"
 msgstr "/Pomocník/_O aplikácii"
 
-#: src/yelp-window.c:138
-msgid "Yelp: GNOME Help Browser"
-msgstr "Yelp: Pomocník GNOME"
+#: src/yelp-window.c:156
+msgid "Help Browser"
+msgstr "Pomocník"
 
-#: src/yelp-window.c:229
+#: src/yelp-window.c:362
+msgid "Help Browser for GNOME 2.0"
+msgstr " omocník pre GNOME 2.0"
+
+#: src/yelp-window.c:386
+msgid "Go back in the history list"
+msgstr "Prejsť dozadu v histórii"
+
+#: src/yelp-window.c:401
+msgid "Go forth in the history list"
+msgstr "Prejsť dopredu v histórii"
+
+#: src/yelp-window.c:416
+msgid "Overview of contents"
+msgstr "Prehľad obsahu"
+
+#: src/yelp-window.c:427
+msgid "Search in the index"
+msgstr "Nájsť v indexe"
+
+#: src/yelp-window.c:438
+msgid "Search for a phrase in the document"
+msgstr "Hľadať frázu v dokumente"
+
+#: src/yelp-window.c:444
 msgid "Help on "
 msgstr "Pomoc pre"
 
-#: src/yelp-window.c:367
-msgid "Help Browser for GNOME 2.0"
-msgstr " omocník pre GNOME 2.0"
+#: src/yelp-window.c:449
+msgid "Enter phrase to search for in all documents"
+msgstr "Zadajte frázu, ktorú chcete nájsť vo všetkých dokumentoch"
 
 #: yelp.desktop.in.h:1
 msgid "GNOME Helpbrowser"
