--- a/po/no.po
+++ b/po/no.po
@@ -5,24 +5,24 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp 0.1\n"
-"POT-Creation-Date: 2001-12-11 23:30+0100\n"
-"PO-Revision-Date: 2001-12-11 23:34+0100\n"
+"POT-Creation-Date: 2001-12-16 16:34+0100\n"
+"PO-Revision-Date: 2001-12-16 16:35+0100\n"
 "Last-Translator: Kjartan Maraas <kmaraas@gnome.org>\n"
-"Language-Team: Norsk (bokmål) <no@li.org>\n"
+"Language-Team: Norsk (bokml) <no@li.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=iso-8859-1\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #: src/yelp-html.c:367
 msgid ""
-"<html><head><title>This is Yelp, a help browser for GNOME "
-"2.0</title></head><body bgcolor=\"white\"><h3>Welcome to Yelp!</h3>This is to "
-"be a help browser for GNOME 2.0 written by Mikael Hallendal.<br><br>Please "
-"read the README and TODO<br></body></html>"
+"<html><head><title>This is Yelp, a help browser for GNOME 2.0</title></"
+"head><body bgcolor=\"white\"><h3>Welcome to Yelp!</h3>This is to be a help "
+"browser for GNOME 2.0 written by Mikael Hallendal.<br><br>Please read the "
+"README and TODO<br></body></html>"
 msgstr ""
-"<html><head><title>Dette er Yelp, en hjelp leser for GNOME "
-"2.0</title></head><body bgcolor=\"white\"><h3>Velkommen til Yelp!</h3> Dette skal "
-"bli hjelp leseren for GNOME 2.0, skrevet av Mikael Hallendal.<br><br>Vennligst "
+"<html><head><title>Dette er Yelp, en hjelp leser for GNOME 2.0</title></"
+"head><body bgcolor=\"white\"><h3>Velkommen til Yelp!</h3> Dette skal bli "
+"hjelp leseren for GNOME 2.0, skrevet av Mikael Hallendal.<br><br>Vennligst "
 "les README og TODO<br>/body></html>"
 
 #: src/yelp-view-content.c:159 src/yelp-view-index.c:172
@@ -53,13 +53,37 @@ msgstr "/Hjelp/_Om"
 msgid "Help Browser"
 msgstr "Hjelp leser"
 
-#: src/yelp-window.c:361
+#: src/yelp-window.c:362
 msgid "Help Browser for GNOME 2.0"
 msgstr "Hjelp leser for GNOME 2.0"
 
-#: src/yelp-window.c:443
+#: src/yelp-window.c:386
+msgid "Go back in the history list"
+msgstr "Gå tilbake i historikken"
+
+#: src/yelp-window.c:401
+msgid "Go forth in the history list"
+msgstr "Gå fremover i historikken"
+
+#: src/yelp-window.c:416
+msgid "Overview of contents"
+msgstr "Innholdsoversikt"
+
+#: src/yelp-window.c:427
+msgid "Search in the index"
+msgstr "Søk i indeksen"
+
+#: src/yelp-window.c:438
+msgid "Search for a phrase in the document"
+msgstr "Søk etter en frase i dokumentet"
+
+#: src/yelp-window.c:444
 msgid "Help on "
 msgstr "Hjelp om"
+
+#: src/yelp-window.c:449
+msgid "Enter phrase to search for in all documents"
+msgstr "Skriv inn frasen du vil søke etter i alle dokumenter"
 
 #: yelp.desktop.in.h:1
 msgid "GNOME Helpbrowser"
@@ -68,4 +92,3 @@ msgstr "GNOME hjelp leser"
 #: yelp.desktop.in.h:2
 msgid "Yelp"
 msgstr "Yelp"
-
