--- a/po/az.po
+++ b/po/az.po
@@ -6,12 +6,13 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yelp 0.01\n"
 "POT-Creation-Date: 2001-12-09 09:09+0100\n"
-"PO-Revision-Date: 2001-12-06 00:30+0200\n"
+"PO-Revision-Date: 2001-12-20 18:44GMT+0200\n"
 "Last-Translator: Vasif İsmayıloğlu MD <azerb_linux@hotmail.com>\n"
-"Language-Team: Azerbaijani turkish <linuxaz@azerimail.net>\n"
+"Language-Team: Azerbaijani Turkic <linuxaz@azerimail.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: KBabel 0.9.5\n"
 
 #: src/yelp-toc.c:140
 msgid "Section"
@@ -35,7 +36,7 @@ msgstr "Yelp: GNOME Yardım Səyyahı"
 
 #: src/yelp-window.c:198
 msgid "Help on "
-msgstr ""
+msgstr "Yardım yeri "
 
 #: yelp.desktop.in.h:1
 msgid "GNOME Helpbrowser"
@@ -45,26 +46,3 @@ msgstr "GNOME Yardımsəyyahı"
 msgid "Yelp"
 msgstr "Yelp"
 
-#~ msgid "/_File"
-#~ msgstr "/_Fayl"
-
-#~ msgid "/File/_New window"
-#~ msgstr "/Fayl_Yeni pəncərə"
-
-#~ msgid "/File/E_xit"
-#~ msgstr "/Fayl/_Çıx"
-
-#~ msgid "/_Help"
-#~ msgstr "/_Yardım"
-
-#~ msgid "/Help/_About"
-#~ msgstr "/Yardım/_Haqqında"
-
-#~ msgid "Contents"
-#~ msgstr "Məzmun"
-
-#~ msgid "Index"
-#~ msgstr "İndeks"
-
-#~ msgid "Help Browser for GNOME 2.0"
-#~ msgstr "GNOME 2.0 üçün Yardım Səyyahı"
