added. yelp-base should listen to destroy-signal of all windows, so it
2001-12-22  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-window.c:
	(yw_close_window_cb): added. yelp-base should listen to
	  destroy-signal of all windows, so it knows when to quit.
	- Added Close window in File menu
	- Put help-menu in <LastBranch>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2001-12-22  Mikael Hallendal  <micke@codefactory.se>
+
+	* src/yelp-window.c:
+	(yw_close_window_cb): added. yelp-base should listen to
+	  destroy-signal of all windows, so it knows when to quit.
+	- Added Close window in File menu
+	- Put help-menu in <LastBranch>
+
 2001-12-12  Mikael Hallendal  <micke@codefactory.se>
 
 	* src/yelp-window.c (yw_populate): add Accel group.
