--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-27  Duarte Loreto <happyguy_pt@hotmail.com>
+
+        * configure.in: Added portuguese to ALL_LINGUAS
+
 2001-12-22  Mikael Hallendal  <micke@codefactory.se>
 
 	* src/yelp-window.c:
