--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-27  Duarte Loreto <happyguy_pt@hotmail.com>
+
+        * pt.po: Added portuguese translation
+
 2001-12-16  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* no.po: Updated Norwegian (bokmål) translation.
