--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-28  Christian Rose  <menthos@menthos.com>
+
+	* sv.po: Updated Swedish translation.
+
 2001-12-27  Duarte Loreto <happyguy_pt@hotmail.com>
 
         * pt.po: Added portuguese translation
