updated, moved issues to bugzilla.
2002-01-04  Mikael Hallendal  <micke@codefactory.se>

	* TODO: updated, moved issues to bugzilla.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-04  Mikael Hallendal  <micke@codefactory.se>
+
+	* TODO: updated, moved issues to bugzilla.
+
 2001-12-27  Duarte Loreto <happyguy_pt@hotmail.com>
 
         * configure.in: Added portuguese to ALL_LINGUAS
