--- a/TODO
+++ b/TODO
@@ -1,35 +1,4 @@
-FEATURES:
----------
+All TODO items moved to GNOME bugzilla. 
 
-* Index-search (keyword search). I've been told that ScrollKeeper CVS
-  has support for this, it should be used in Yelp.
+http://bugzilla.gnome.org/buglist.cgi?product=Yelp&bug_status=NEW&bug_status=ASSIGNED&bug_status=UNCONFIRMED&bug_status=REOPENED
 
-* Support for external links (if a link points outside the documents the
-  prefered web browser should be started to handle this).
-
-* Create the tree out of information from the system 
-  - Add man  (Patanjali?)
-  - Add info (Patanjali?)
-
-* Home view:
-  - The homeview should show the top two levels of the contents tree.
-  - Clicking on a link in the home view should give you the contents-view 
-    with contents-root being the node you clicked in the home-view.
-  - Use toplevel for Info and Man.
-
-* Generate HTML-indexes for sections without a document (when opening a 
-  node in the tree, if that node doesn't have a document connected to it
-  a HTML page should be generated, to allow the user to browse only in 
-  the HTML widget).
-  (might not be needed when we have the Home-scheme)
-
-* Bookmark support
-
-* Recently viewed
-
-* Start with factory, if already activated and running, open new window.
-
-* Icons needed:
-  - Contents
-  - Recently viewed
-  - Bookmarks
