do no use continuation characters. It irritates auto*/sed on my system.
2002-01-04  Jody Goldberg <jody@gnome.org>

	* configure.in (CFLAGS) : do no use continuation characters.  It
	  irritates auto*/sed on my system.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-04  Jody Goldberg <jody@gnome.org>
+
+	* configure.in (CFLAGS) : do no use continuation characters.  It
+	  irritates auto*/sed on my system.
+
 2002-01-04  Mikael Hallendal  <micke@codefactory.se>
 
 	* TODO: updated, moved issues to bugzilla.
