--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-04  Mikael Hallendal  <micke@codefactory.se>
+
+	* src/yelp-main.c (main): removed setlocale
+
 2002-01-04  Jody Goldberg <jody@gnome.org>
 
 	* configure.in (CFLAGS) : do no use continuation characters.  It
