Added spanish translation

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-06  Germán Poo-Caamaño <gpoo@ubiobio.cl>
+
+	* configure.in: Added spanish (es) to ALL_LINGUAS
+
 2002-01-05  Mikael Hallendal  <micke@codefactory.se>
 
 	* src/yelp-window.c (yw_exit_cb): use bonobo_main_quit instead of
