--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-06  Germán Poo-Caamaño <gpoo@ubiobio.cl>
+
+	* es.po: Added spanish translation.
+
 2002-01-04  Stanislav Visnovsky  <visnovsky@nenya.ms.mff.cuni.cz>
 
 	* sk.po: Updated Slovak translation.
