--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-06  Fatih Demir <kabalak@gtranslator.org>
+
+	* configure.in: Added "tr" to the languages list.
+
 2002-01-06  Germán Poo-Caamaño <gpoo@ubiobio.cl>
 
 	* configure.in: Added spanish (es) to ALL_LINGUAS
