--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-06  Fatih Demir <kabalak@gtranslator.org>
+
+	* tr.po: Added Turkish translation by Görkem Cetin.
+
 2002-01-06  Germán Poo-Caamaño <gpoo@ubiobio.cl>
 
 	* es.po: Added spanish translation.
