--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-06  Christian Rose  <menthos@menthos.com>
+
+	* configure.in: Added "es" to ALL_LINGUAS.
+
 2002-01-06  Fatih Demir <kabalak@gtranslator.org>
 
 	* configure.in: Added "tr" to the languages list.
