--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-06  Christian Rose  <menthos@menthos.com>
+
+	* POTFILES.in: Added missing file.
+	* sv.po: Updated Swedish translation.
+
 2002-01-06  Fatih Demir <kabalak@gtranslator.org>
 
 	* tr.po: Added Turkish translation by Görkem Cetin.
