--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-09  Mikael Hallendal  <micke@codefactory.se>
+
+	* src/yelp-base.[ch]: use BonoboObject instead of BonoboXObject,
+	  thanks rhult for notifying me.
+
 2002-01-06  Christian Rose  <menthos@menthos.com>
 
 	* configure.in: Added "es" to ALL_LINGUAS.
