Added "nl" to ALL_LINGUAS. Added missing files. Updated Swedish
2002-01-10  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "nl" to ALL_LINGUAS.
	* po/POTFILES.in: Added missing files.
	* po/sv.po: Updated Swedish translation.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-10  Christian Rose  <menthos@menthos.com>
+
+	* configure.in: Added "nl" to ALL_LINGUAS.
+
 2002-01-09  Alex Larsson  <alexl@redhat.com>
 
 	* acconfig.h:
