--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-10  Christian Rose  <menthos@menthos.com>
+
+	* POTFILES.in: Added missing files.
+	* sv.po: Updated Swedish translation.
+
 2002-01-08  Duarte Loreto <happyguy_pt@hotmail.com>
 
         * pt.po: Updated portuguese translation
