Added missing file. Updated Swedish translation.
2002-01-10  Christian Rose  <menthos@menthos.com>

	* POTFILES.in: Added missing file.
	* sv.po: Updated Swedish translation.

--- a/po/sv.po
+++ b/po/sv.po
@@ -8,8 +8,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
-"POT-Creation-Date: 2002-01-10 02:04+0100\n"
-"PO-Revision-Date: 2002-01-10 02:04+0100\n"
+"POT-Creation-Date: 2002-01-10 03:12+0100\n"
+"PO-Revision-Date: 2002-01-10 03:12+0100\n"
 "Last-Translator: Christian Rose <menthos@menthos.com>\n"
 "Language-Team: Swedish <sv@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -23,6 +23,14 @@ msgstr "Yelp"
 #: src/GNOME_Yelp.server.in.h:2
 msgid "Yelp Factory"
 msgstr "Yelp-fabrik"
+
+#: src/gtktreemodelfilter.c:263
+msgid "TreeModelFilter model"
+msgstr "TreeModelFilter-modell"
+
+#: src/gtktreemodelfilter.c:264
+msgid "The model for the TreeModelFilter to filter"
+msgstr "Modellen för TreeModelFilter att filtrera"
 
 #: src/yelp-html.c:367
 msgid ""
