--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,5 +1,10 @@
 2002-01-10  Christian Rose  <menthos@menthos.com>
 
+	* POTFILES.in: Added missing file.
+	* sv.po: Updated Swedish translation.
+
+2002-01-10  Christian Rose  <menthos@menthos.com>
+
 	* POTFILES.in: Added missing files.
 	* sv.po: Updated Swedish translation.
 
