--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-01-11  Mikael Hallendal  <micke@codefactory.se>
+
+	* src/yelp-window.c (yw_create_toolbar): don't include help-on in
+	  the toolbar.
+
 2002-01-10  Mikael Hallendal  <micke@codefactory.se>
 
 	* src/yelp-view-content.c: 
