--- a/po/no.po
+++ b/po/no.po
@@ -5,15 +5,31 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp 0.1\n"
-"POT-Creation-Date: 2001-12-16 16:34+0100\n"
-"PO-Revision-Date: 2001-12-16 16:35+0100\n"
+"POT-Creation-Date: 2002-01-12 01:20+0100\n"
+"PO-Revision-Date: 2002-01-12 01:22+0100\n"
 "Last-Translator: Kjartan Maraas <kmaraas@gnome.org>\n"
 "Language-Team: Norsk (bokml) <no@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=iso-8859-1\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: src/yelp-html.c:367
+#: src/GNOME_Yelp.server.in.h:1 yelp.desktop.in.h:2
+msgid "Yelp"
+msgstr "Yelp"
+
+#: src/GNOME_Yelp.server.in.h:2
+msgid "Yelp Factory"
+msgstr "Yelp factory"
+
+#: src/gtktreemodelfilter.c:263
+msgid "TreeModelFilter model"
+msgstr "TreeModelFilter-modell"
+
+#: src/gtktreemodelfilter.c:264
+msgid "The model for the TreeModelFilter to filter"
+msgstr "Modellen som TreeModelFilter skal filtrere"
+
+#: src/yelp-html.c:381
 msgid ""
 "<html><head><title>This is Yelp, a help browser for GNOME 2.0</title></"
 "head><body bgcolor=\"white\"><h3>Welcome to Yelp!</h3>This is to be a help "
@@ -25,70 +41,156 @@ msgstr ""
 "hjelp leseren for GNOME 2.0, skrevet av Mikael Hallendal.<br><br>Vennligst "
 "les README og TODO<br>/body></html>"
 
+#: src/yelp-info.c:92
+msgid "Info Pages"
+msgstr "Infosider"
+
+#: src/yelp-main.c:77
+#, c-format
+msgid "Could not activate Yelp: '%s'"
+msgstr "Kunne ikke aktivere Yelp: «%s»"
+
+#: src/yelp-main.c:97
+msgid "Could not open new window."
+msgstr "Kunne ikke åpne nytt vindu."
+
+#: src/yelp-man.c:266 src/yelp-man.c:287 src/yelp-man.c:323 src/yelp-man.c:355
+#: src/yelp-man.c:371 src/yelp-man.c:382
+msgid "X11"
+msgstr "X11"
+
+#: src/yelp-man.c:271 src/yelp-man.c:302 src/yelp-man.c:360 src/yelp-man.c:387
+msgid "OpenSSL"
+msgstr "OpenSSL"
+
+#: src/yelp-man.c:276
+msgid "Termcap"
+msgstr "Termcap"
+
+#: src/yelp-man.c:292
+msgid "Perl"
+msgstr "Perl"
+
+#: src/yelp-man.c:297
+msgid "Qt"
+msgstr "Qt"
+
+#: src/yelp-man.c:307
+msgid "TIFF"
+msgstr "TIFF"
+
+#: src/yelp-man.c:312
+msgid "PThreads"
+msgstr "PThreads"
+
+#: src/yelp-man.c:334
+msgid "System Calls"
+msgstr "Systemkall"
+
+#: src/yelp-man.c:339
+msgid "Library Functions"
+msgstr "Bibliotekfunksjoner"
+
+#: src/yelp-man.c:344
+msgid "Kernel Routines"
+msgstr "Kjernerutiner"
+
+#: src/yelp-man.c:399
+msgid "Applications"
+msgstr "Applikasjoner"
+
+#: src/yelp-man.c:404
+msgid "Development"
+msgstr "Utvikling"
+
+#: src/yelp-man.c:409
+msgid "Hardware Devices"
+msgstr "Maskinvareenheter"
+
+#: src/yelp-man.c:414
+msgid "Configuration Files"
+msgstr "Konfigurasjonsfiler"
+
+#: src/yelp-man.c:419
+msgid "Games"
+msgstr "Spill"
+
+#: src/yelp-man.c:424
+msgid "Overviews"
+msgstr "Oversikter"
+
+#: src/yelp-man.c:429
+msgid "System Administration"
+msgstr "Systemadministrasjon"
+
+#: src/yelp-man.c:440
+msgid "Manual Pages"
+msgstr "Manualsider"
+
 #: src/yelp-view-content.c:159 src/yelp-view-index.c:172
 msgid "Section"
 msgstr "Del"
 
-#: src/yelp-window.c:105
+#: src/yelp-window.c:109
 msgid "/_File"
 msgstr "/_Fil"
 
-#: src/yelp-window.c:106
+#: src/yelp-window.c:110
 msgid "/File/_New window"
 msgstr "/Fil/_Nytt vindu"
 
-#: src/yelp-window.c:107
+#: src/yelp-window.c:111
+msgid "/File/_Close window"
+msgstr "/Fil/_Lukk vindu"
+
+#: src/yelp-window.c:112
 msgid "/File/E_xit"
 msgstr "/Fil/A_vslutt"
 
-#: src/yelp-window.c:108
+#: src/yelp-window.c:113
 msgid "/_Help"
 msgstr "/_Hjelp"
 
-#: src/yelp-window.c:109
+#: src/yelp-window.c:114
 msgid "/Help/_About"
 msgstr "/Hjelp/_Om"
 
-#: src/yelp-window.c:156
+#: src/yelp-window.c:161
 msgid "Help Browser"
 msgstr "Hjelp leser"
 
-#: src/yelp-window.c:362
+#: src/yelp-window.c:376
 msgid "Help Browser for GNOME 2.0"
 msgstr "Hjelp leser for GNOME 2.0"
 
-#: src/yelp-window.c:386
+#: src/yelp-window.c:400
 msgid "Go back in the history list"
 msgstr "Gå tilbake i historikken"
 
-#: src/yelp-window.c:401
+#: src/yelp-window.c:415
 msgid "Go forth in the history list"
 msgstr "Gå fremover i historikken"
 
-#: src/yelp-window.c:416
+#: src/yelp-window.c:430
 msgid "Overview of contents"
 msgstr "Innholdsoversikt"
 
-#: src/yelp-window.c:427
+#: src/yelp-window.c:441
 msgid "Search in the index"
 msgstr "Søk i indeksen"
 
-#: src/yelp-window.c:438
+#: src/yelp-window.c:453
 msgid "Search for a phrase in the document"
 msgstr "Søk etter en frase i dokumentet"
 
-#: src/yelp-window.c:444
+#: src/yelp-window.c:459
 msgid "Help on "
 msgstr "Hjelp om"
 
-#: src/yelp-window.c:449
+#: src/yelp-window.c:464
 msgid "Enter phrase to search for in all documents"
 msgstr "Skriv inn frasen du vil søke etter i alle dokumenter"
 
 #: yelp.desktop.in.h:1
 msgid "GNOME Helpbrowser"
 msgstr "GNOME hjelp leser"
-
-#: yelp.desktop.in.h:2
-msgid "Yelp"
-msgstr "Yelp"
