--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-14  Mikael Hallendal  <micke@codefactory.se>
+
+	* configure.in: bumped version to 0.1.99
+
 2002-01-11  Alex Larsson  <alexl@redhat.com>
 
 	* src/yelp-html.c (yh_link_clicked_cb):
