added Alexander Larsson
2002-01-14  Mikael Hallendal  <micke@codefactory.se>

	* AUTHORS: added Alexander Larsson

	* src/yelp-window.c (yw_about_cb): added Alexander Larsson to
	authors.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2002-01-14  Mikael Hallendal  <micke@codefactory.se>
 
+	* AUTHORS: added Alexander Larsson
+
+	* src/yelp-window.c (yw_about_cb): added Alexander Larsson to
+	authors.
+
 	* configure.in: bumped version to 0.1.99
 
 2002-01-11  Alex Larsson  <alexl@redhat.com>
