--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2002-01-14  Mikael Hallendal  <micke@codefactory.se>
 
+	* src/yelp-view-toc.[ch]: renamed from YelpViewHome.
+
+	* src/yelp-window.c: use YelpViewTOC instead of YelpViewHome.
+
 	* AUTHORS: added Alexander Larsson
 
 	* src/yelp-window.c (yw_about_cb): added Alexander Larsson to
