--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Jan 15 23:27:44 2002  Kristian Rietveld  <kris@gtk.org>
+
+	* src/gtktreemodelfilter.[ch]: update
+
 2002-01-14  Alex Larsson  <alexl@redhat.com>
 
 	* yelp-section.[ch]:
