--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-16  Peteris Krisjanis <peteris.krisjanis@ttc.lv>
+
+	* lv.po: Added Latvian translation.
+    
 2002-01-11  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* no.po: Updated Norwegian (bokmål) translation.
