--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-17  Christian Rose  <menthos@menthos.com>
+
+	* sv.po: Updated Swedish translation.
+
 2002-01-16  Peteris Krisjanis <peteris.krisjanis@ttc.lv>
 
 	* lv.po: Added Latvian translation.
