--- a/po/uk.po
+++ b/po/uk.po
@@ -5,15 +5,15 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
-"POT-Creation-Date: 2001-12-18 11:46+0200\n"
-"PO-Revision-Date: 2001-12-03 10:34+0200\n"
-"Last-Translator: Yuriy Syrota <rasta@renome.rovno.ua>\n"
+"POT-Creation-Date: 2002-01-17 13:16+0200\n"
+"PO-Revision-Date: 2002-01-17 12:15+0200\n"
+"Last-Translator: Yuriy Syrota <yuri@renome.rovno.ua>\n"
 "Language-Team: Ukrainian <uk@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: src/yelp-html.c:367
+#: src/yelp-html.c:382
 msgid ""
 "<html><head><title>This is Yelp, a help browser for GNOME "
 "2.0</title></head><body bgcolor=\"white\"><h3>Welcome to Yelp!</h3>This is "
@@ -28,63 +28,153 @@ msgstr ""
 "ласка, перечитайте файли README та "
 "TODO<br></body></html>"
 
+#: src/yelp-info.c:94
+msgid "info"
+msgstr "info"
+
+#: src/yelp-main.c:77
+#, c-format
+msgid "Could not activate Yelp: '%s'"
+msgstr "Не вдалося активувати Yelp: \"%s\""
+
+#: src/yelp-main.c:97
+msgid "Could not open new window."
+msgstr "Не вдалося відкрити нове вікно."
+
+#: src/yelp-man.c:267 src/yelp-man.c:288 src/yelp-man.c:324 src/yelp-man.c:356
+#: src/yelp-man.c:372 src/yelp-man.c:383
+msgid "X11"
+msgstr "X11"
+
+#: src/yelp-man.c:272 src/yelp-man.c:303 src/yelp-man.c:361 src/yelp-man.c:388
+msgid "OpenSSL"
+msgstr "OpenSSL"
+
+#: src/yelp-man.c:277
+msgid "Termcap"
+msgstr "Termcap"
+
+#: src/yelp-man.c:293
+msgid "Perl"
+msgstr "PERL"
+
+#: src/yelp-man.c:298
+msgid "Qt"
+msgstr "Qt"
+
+#: src/yelp-man.c:308
+msgid "TIFF"
+msgstr "TIFF"
+
+#: src/yelp-man.c:313
+msgid "PThreads"
+msgstr "PThreads"
+
+#: src/yelp-man.c:335
+msgid "System Calls"
+msgstr "Системні виклики"
+
+#: src/yelp-man.c:340
+msgid "Library Functions"
+msgstr "Бібліотечні функції"
+
+#: src/yelp-man.c:345
+msgid "Kernel Routines"
+msgstr "Робота з ядром"
+
+#: src/yelp-man.c:400
+msgid "Applications"
+msgstr "Програми"
+
+#: src/yelp-man.c:405
+msgid "Development"
+msgstr "Розробка"
+
+#: src/yelp-man.c:410
+msgid "Hardware Devices"
+msgstr "Апаратні пристрої"
+
+#: src/yelp-man.c:415
+msgid "Configuration Files"
+msgstr "Конфіґураційні файли"
+
+#: src/yelp-man.c:420
+msgid "Games"
+msgstr "Ігри"
+
+#: src/yelp-man.c:425
+msgid "Overviews"
+msgstr "Огляд"
+
+#: src/yelp-man.c:430
+msgid "System Administration"
+msgstr "Системне адміністрування"
+
+#: src/yelp-man.c:441
+msgid "man"
+msgstr "man"
+
 #: src/yelp-view-content.c:159 src/yelp-view-index.c:172
 msgid "Section"
 msgstr "Розділ"
 
-#: src/yelp-window.c:105
+#: src/yelp-window.c:108
 msgid "/_File"
 msgstr "/_Файл"
 
-#: src/yelp-window.c:106
+#: src/yelp-window.c:109
 msgid "/File/_New window"
 msgstr "/Файл/_Нове вікно"
 
-#: src/yelp-window.c:107
+#: src/yelp-window.c:110
+msgid "/File/_Close window"
+msgstr "/Файл/_Закрити вікно"
+
+#: src/yelp-window.c:111
 msgid "/File/E_xit"
 msgstr "/Файл/Ви_йти"
 
-#: src/yelp-window.c:108
+#: src/yelp-window.c:112
 msgid "/_Help"
 msgstr "/_Довідка"
 
-#: src/yelp-window.c:109
+#: src/yelp-window.c:113
 msgid "/Help/_About"
 msgstr "/Довідка/_Про"
 
-#: src/yelp-window.c:156
+#: src/yelp-window.c:160
 msgid "Help Browser"
 msgstr "Перегляд довідки"
 
-#: src/yelp-window.c:362
+#: src/yelp-window.c:376
 msgid "Help Browser for GNOME 2.0"
 msgstr "Перегляд довідки для GNOME 2.0"
 
-#: src/yelp-window.c:386
+#: src/yelp-window.c:400
 msgid "Go back in the history list"
 msgstr "Перейти назад у списку історії"
 
-#: src/yelp-window.c:401
+#: src/yelp-window.c:415
 msgid "Go forth in the history list"
 msgstr "Перейти вперед у списку історії"
 
-#: src/yelp-window.c:416
+#: src/yelp-window.c:430
 msgid "Overview of contents"
 msgstr "Огляд вмісту"
 
-#: src/yelp-window.c:427
+#: src/yelp-window.c:441
 msgid "Search in the index"
 msgstr "Пошук в показнику"
 
-#: src/yelp-window.c:438
+#: src/yelp-window.c:453
 msgid "Search for a phrase in the document"
 msgstr "Введіть фразу для пошуку в документі"
 
-#: src/yelp-window.c:444
+#: src/yelp-window.c:459
 msgid "Help on "
 msgstr "Довідка про "
 
-#: src/yelp-window.c:449
+#: src/yelp-window.c:464
 msgid "Enter phrase to search for in all documents"
 msgstr ""
 "Введіть фразу для пошуку в усіх "
