Make TOC view scrolled window policy AUTO.
2002-01-17  Alex Larsson  <alexl@redhat.com>

	* src/yelp-window.c (yw_populate):
	Make TOC view scrolled window policy AUTO.

	 * yelp-view-toc.c:
	 More initial man work.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2002-01-17  Alex Larsson  <alexl@redhat.com>
+
+	* src/yelp-window.c (yw_populate):
+	Make TOC view scrolled window policy AUTO.
+	
+	 * yelp-view-toc.c:
+	 More initial man work.
+	 
 2002-01-16  Seth Nickell  <snickell@stanford.edu>
 
 	* Makefile.am:
