--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2002-01-19  Mikael Hallendal  <micke@codefactory.se>
 
+	* src/yelp-html.c (yelp_html_new): remove the temp printout. just
+	  print Yelp for now.
+
+	* src/yelp-man.c (yelp_man_init): 
+	  check that /usr/man and /usr/share/man doesn't point to the same
+	  place. 
+
 	* src/yelp-scrollkeeper.c:
 	(ys_strip_scheme): rewrote to
 	- accept NULL instead of scheme
