--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2002-01-19  Mikael Hallendal  <micke@codefactory.se>
 
+	* src/yelp-info.c (yelp_info_init): 
+	- check if /usr/share/info and /usr/info is the same before adding
+	both.
+
+2002-01-19  Mikael Hallendal  <micke@codefactory.se>
+
 	* src/yelp-man.c (yelp_man_init): 
 	- Use g_spawn_command_line_sync instead of popen.
 	- if 'manpath' command is not found, look for MANPATH env. before
