--- a/ChangeLog
+++ b/ChangeLog
@@ -1,10 +1,14 @@
 2002-01-19  Mikael Hallendal  <micke@codefactory.se>
 
+	* src/yelp-base.c
+	(yelp_base_window_finalized_cb): added/impl. 
+	  quit the bonobo-main when last window is destroyed.
+	(yelp_base_new_window): add a weak ref to the new window. used to
+	  be able to quit bonobo-main when last window is destroyed.
+
 	* src/yelp-info.c (yelp_info_init): 
 	- check if /usr/share/info and /usr/info is the same before adding
 	both.
-
-2002-01-19  Mikael Hallendal  <micke@codefactory.se>
 
 	* src/yelp-man.c (yelp_man_init): 
 	- Use g_spawn_command_line_sync instead of popen.
@@ -12,16 +16,12 @@
 	  using /usr/man and /usr/share/man
 	- cleaned up a little to better fit into Yelp code.
 
-2002-01-19  Mikael Hallendal  <micke@codefactory.se>
-
 	* src/yelp-html.c (yelp_html_new): remove the temp printout. just
 	  print Yelp for now.
 
 	* src/yelp-man.c (yelp_man_init): 
 	  check that /usr/man and /usr/share/man doesn't point to the same
 	  place. 
-
-2002-01-19  Mikael Hallendal  <micke@codefactory.se>
 
 	* src/yelp-scrollkeeper.c:
 	(ys_strip_scheme): rewrote to
