--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2002-01-21  Seth Nickell  <snickell@stanford.edu>
+
+	* yelp.desktop.in:
+
+	Call it "Help".
+
 2002-01-19  Mikael Hallendal  <micke@codefactory.se>
 
 	* src/yelp-base.c
