--- a/po/nl.po
+++ b/po/nl.po
@@ -5,15 +5,15 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Yelp cvs\n"
-"POT-Creation-Date: 2002-01-07 07:52-0500\n"
-"PO-Revision-Date: 2002-01-08 00:42+0100\n"
+"POT-Creation-Date: 2002-01-21 10:34-0500\n"
+"PO-Revision-Date: 2002-01-21 20:05+0100\n"
 "Last-Translator: Tino Meinen <a.t.meinen@chello.nl>\n"
 "Language-Team: Dutch <nl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=iso-8859-15\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: src/GNOME_Yelp.server.in.h:1 yelp.desktop.in.h:2
+#: src/GNOME_Yelp.server.in.h:1
 msgid "Yelp"
 msgstr "Yelp"
 
@@ -21,17 +21,9 @@ msgstr "Yelp"
 msgid "Yelp Factory"
 msgstr "Yelp Factory"
 
-#: src/yelp-html.c:367
-msgid ""
-"<html><head><title>This is Yelp, a help browser for GNOME "
-"2.0</title></head><body bgcolor=\"white\"><h3>Welcome to Yelp!</h3>This is to "
-"be a help browser for GNOME 2.0 written by Mikael Hallendal.<br><br>Please "
-"read the README and TODO<br></body></html>"
-msgstr ""
-"<html><head><title>Dit is Yelp, een help browser voor GNOME "
-"2.0</title></head><body bgcolor=\"white\"><h3>Welkom bij Yelp!</h3>Dit is "
-"bedoeld als een help browser voor GNOME 2.0 geschreven door Mikael "
-"Hallendal.<br><br>Lees aub README en TODO<br></body></html>"
+#: src/yelp-info.c:98
+msgid "info"
+msgstr "info"
 
 #: src/yelp-main.c:77
 #, c-format
@@ -42,35 +34,108 @@ msgstr "Kon Yelp niet opstarten: '%s'"
 msgid "Could not open new window."
 msgstr "Kon geen nieuw window openen."
 
+#: src/yelp-man.c:269 src/yelp-man.c:290 src/yelp-man.c:326 src/yelp-man.c:358
+#: src/yelp-man.c:374 src/yelp-man.c:385
+msgid "X11"
+msgstr "X11"
+
+#: src/yelp-man.c:274 src/yelp-man.c:305 src/yelp-man.c:363 src/yelp-man.c:390
+msgid "OpenSSL"
+msgstr "OpenSSL"
+
+#: src/yelp-man.c:279
+msgid "Termcap"
+msgstr "Termcap"
+
+#: src/yelp-man.c:295
+msgid "Perl"
+msgstr "Perl"
+
+#: src/yelp-man.c:300
+msgid "Qt"
+msgstr "Qt"
+
+#: src/yelp-man.c:310
+msgid "TIFF"
+msgstr "TIFF"
+
+#: src/yelp-man.c:315
+msgid "PThreads"
+msgstr "PThreads"
+
+#: src/yelp-man.c:337
+msgid "System Calls"
+msgstr "Systeem functies"
+
+#: src/yelp-man.c:342
+msgid "Library Functions"
+msgstr "Bibliotheek Functies"
+
+#: src/yelp-man.c:347
+msgid "Kernel Routines"
+msgstr "Kernel Routines"
+
+#: src/yelp-man.c:402
+msgid "Applications"
+msgstr "Toepassingen"
+
+#: src/yelp-man.c:407
+msgid "Development"
+msgstr "Development"
+
+#: src/yelp-man.c:412
+msgid "Hardware Devices"
+msgstr "Hardware Apparatuur"
+
+#: src/yelp-man.c:417
+msgid "Configuration Files"
+msgstr "Configuratie Bestanden"
+
+#: src/yelp-man.c:422
+msgid "Games"
+msgstr "Games"
+
+#: src/yelp-man.c:427
+msgid "Overviews"
+msgstr "Overzichten"
+
+#: src/yelp-man.c:432
+msgid "System Administration"
+msgstr "Systeem Administratie"
+
+#: src/yelp-man.c:443
+msgid "man"
+msgstr "man"
+
 #: src/yelp-view-content.c:159 src/yelp-view-index.c:172
 msgid "Section"
 msgstr "Sectie"
 
-#: src/yelp-window.c:109
+#: src/yelp-window.c:108
 msgid "/_File"
 msgstr "/_Bestand"
 
-#: src/yelp-window.c:110
+#: src/yelp-window.c:109
 msgid "/File/_New window"
 msgstr "/Bestand/_Nieuw window"
 
-#: src/yelp-window.c:111
+#: src/yelp-window.c:110
 msgid "/File/_Close window"
 msgstr "/Bestand/_Sluit window"
 
-#: src/yelp-window.c:112
+#: src/yelp-window.c:111
 msgid "/File/E_xit"
 msgstr "/Bestand/_Afsluiten"
 
-#: src/yelp-window.c:113
+#: src/yelp-window.c:112
 msgid "/_Help"
 msgstr "/_Help"
 
-#: src/yelp-window.c:114
+#: src/yelp-window.c:113
 msgid "/Help/_About"
 msgstr "/Help/_Over"
 
-#: src/yelp-window.c:161
+#: src/yelp-window.c:160
 msgid "Help Browser"
 msgstr "Help Browser"
 
@@ -80,7 +145,7 @@ msgstr "Help Browser voor GNOME 2.0"
 
 #: src/yelp-window.c:400
 msgid "Go back in the history list"
-msgstr "Ga terug in de geschiedenis lijst"
+msgstr "Ga terug in de geschiedenislijst"
 
 #: src/yelp-window.c:415
 msgid "Go forth in the history list"
@@ -94,19 +159,23 @@ msgstr "Overzicht van de inhoud"
 msgid "Search in the index"
 msgstr "Doorzoek de index"
 
-#: src/yelp-window.c:452
+#: src/yelp-window.c:453
 msgid "Search for a phrase in the document"
 msgstr "Zoek naar een tekst in het document"
 
-#: src/yelp-window.c:458
+#: src/yelp-window.c:459
 msgid "Help on "
 msgstr "Help over"
 
-#: src/yelp-window.c:463
+#: src/yelp-window.c:464
 msgid "Enter phrase to search for in all documents"
 msgstr "Voer de zoektekst in. Alle documenten zullen worden doorzocht."
 
 #: yelp.desktop.in.h:1
 msgid "GNOME Helpbrowser"
 msgstr "GNOME Helpbrowser"
+
+#: yelp.desktop.in.h:2
+msgid "Help"
+msgstr "Help"
 
