the .list file has a -
2002-01-21  jacob berkman  <jacob@ximian.com>

	* src/Makefile.am (EXTRA_DIST): the .list file has a -

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-21  jacob berkman  <jacob@ximian.com>
+
+	* src/Makefile.am (EXTRA_DIST): the .list file has a -
+
 2002-01-21  Seth Nickell  <snickell@stanford.edu>
 
 	* yelp.desktop.in:
