use stock items for menu.
2002-01-22  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-window.c: use stock items for menu.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-22  Mikael Hallendal  <micke@codefactory.se>
+
+	* src/yelp-window.c: use stock items for menu.
+
 2002-01-21  Alex Larsson  <alexl@redhat.com>
 
         * src/yelp-marshal.list:
