--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,18 @@
 2002-01-22  Mikael Hallendal  <micke@codefactory.se>
 
+	* src/yelp-view-toc.c: started to rewrite to use GNode-tree
+	  instead of GtkTreeStore.
+
+	* src/yelp-base.c: use a GNode-tree instead of the GtkTreeStore.
+
+	* src/yelp-window.c: dito.
+
+	* src/yelp-scrollkeeper.[ch]: dito.
+
+	* src/yelp-man.[ch]: dito.
+
+	* src/yelp-info.[ch]: dito.
+
 	* src/yelp-window.c: use stock items for menu.
 
 2002-01-21  Alex Larsson  <alexl@redhat.com>
